--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -6,7 +6,7 @@
  egg.1.b:0 "섬의 요새화가 우선이다."
  
  egg.2.t:0 "수상한 장치"
- egg.2.d:0 "추가적인 예산을 편성해 마다가스카르로 파견한 고고학자와 현지의 병사들이 오늘 유적의 조사 보고서를 발송했습니다. 보고서에 따르면 그들은 고대의 병영이었을 것으로 추정되는 건물의 터에서 어떠한 '장치'를 발견했고, 그 장치를 이리저리 만져보다 사출된 와이어에 의해 병사 한 명을 잃을 뻔했다는 듯 합니다. \n\n병영을 떠나 '벽'의 안쪽으로 나아간 그들은 도서관의 역할을 했을 것으로 보이는 곳을 조사하기 시작했습니다.\n그곳에서 여러 서적들을 찾을 수 있었지만, 현지에 파견된 고고학자들의 존재가 무색하도록 서적들에 기록된 문자는 처음 발견되는 양식이었으며 와이어를 사출한 그 '장치'의 교범으로 보이는 서적을 찾아낸 병사와 고고학자들은 그림으로나마 그 장치를 분석함과 동시에 이름을 겨우겨우 알아낼 수 있었습니다.\n\n해석에 따르면 병영의 터에서 발견된 그 장치의 이름은 '입체기동장치'입니다."
+ egg.2.d:0 "추가적인 예산을 편성해 마다가스카르로 파견한 고고학자와 현지의 병사들이 오늘 유적의 조사 보고서를 발송했습니다. 보고서에 따르면 그들은 고대의 병영이었을 것으로 추정되는 건물의 터에서 어떠한 '장치'를 발견했고, 그 장치를 이리저리 만져보다 사출된 와이어에 의해 병사 한 명을 잃을 뻔했다는 듯 합니다. \n\n병영을 떠나 '벽'의 안쪽으로 나아간 그들은 도서관의 역할을 했을 것으로 보이는 곳을 조사하기 시작했습니다.\n그곳에서 여러 서적들을 찾을 수 있었던 정찰대였지만, 현지에 파견된 고고학자들의 존재가 무색하도록 서적들에 기록된 문자는 처음 발견되는 양식이었으며 와이어를 사출한 그 '장치'의 교범으로 보이는 서적을 찾아낸 병사와 고고학자들은 그림으로나마 그 장치를 분석함과 동시에 이름을 겨우겨우 알아낼 수 있었습니다.\n\n해석에 따르면 병영의 터에서 발견된 그 장치의 이름은 '입체기동장치'입니다."
  egg.2.a:0 "이것은 충분히 분석해볼 가치가 있다."
  egg.2.b:0 "어쩌면 박물관에서 제 빛을 낼 물건일지도 모르겠군."
  
@@ -150,8 +150,13 @@ korea.3.t:0 "1936년의 세계?"
  kor_news.4.a:0 "한반도의 운명이 어떻게될까."
  kor_news.4.b:0 "빌어먹을 빨갱이들까지 난리로군!"
  kor_news.4.c:0 "우린 이걸원한게 아니였는데..최악이군." 
- kor_news.4.f:0 "동지여! 전진하자!" 
- 
+ kor_news.4.f:0 "동지여! 전진하자!"
+
+ kor_news.5.t:0 "부산 함락"
+ kor_news.5.desc:0 "제주런 각 떴다"
+ kor_news.5.a:0 ""
+ kor_news.5.b:0 ""
+ kor_news.5.c:0 ""
 
  kor_news.6.t:0 "대한민국 해군-일본제국 해군 간의 마찰"
  kor_news.6.d:0 "오늘 오전 일본제국의 영해상에서 일본제국 해군과 대한민국 해군 간의 마찰이 발생했습니다. \n현장의 기자가 취재한 일본제국 해군 구축함 함장의 진술에 따르면 대한민국 해군 소속으로 추정되는 함선이 자국의 영해 근처에서 출현했고, 귀함이 일본제국의 영해로 접근하고 있다는 수 차례의 경고에도 귀항하지 않자 그는 이를 비상사태라고 판단해 주력 함대를 호출했다고 합니다. \n\n상대 측의 함선은 이 움직임을 예상한 듯 일본 제국의 주력 함대가 다가오자 후퇴한 뒤 다른 함대와 합류해 현재 일본 제국의 함대와 영해의 경계에서 대치 중입니다."
@@ -241,12 +246,19 @@ korea.3.t:0 "1936년의 세계?"
  kor_news.21.f:0 ""
 
  kor_news.22.t:0 "류경호텔의 준공"
- kor_news.22.desc:0 "[PRK.GetName]의 대외적인 선전으로써 홍보된, 현존하는 세계 최대 규모의 호텔인 류경 호텔이 오늘 조선중앙통신사와 조선중앙텔레비죤의 보도를 통해 그 실체를 드러냈습니다. 총합 105층계와 330미터의 높이를 자랑하는 이 호텔은 3천 4백개의 객실을 보유하고 있으며, 그 이름의 유래는 [PRK.GetName]의 옛 이름인 류경에서 따온 것입니다. 본 건물이 소재한 평양에서 오늘 개장 기념식이 열렸고, 기념식에서 진행된 [PRK.GetLeader]의 연설에서 그는 ‘이 건물로 하여금 이곳을 방문하는 모든 인민이 우리 체제의 우월성과 공화국의 위대함을 배워가게 되기를 바란다’는 말로 그의 포부를 밝혔습니다."
+ kor_news.22.desc:0 "[PRK.GetName]의 대외적인 선전으로써 홍보된, 현존하는 세계 최대 규모의 호텔인 류경 호텔이 오늘 조선중앙통신사와 조선중앙텔레비죤의 보도를 통해 그 실체를 드러냈습니다.\n\n총합 105층계와 330미터의 높이를 자랑하는 이 호텔은 3천 4백개의 객실을 보유하고 있으며, 그 이름의 유래는 [PRK.GetName]의 옛 이름인 류경에서 따온 것입니다. 본 건물이 소재한 평양에서 오늘 개장 기념식이 열렸고, 기념식에서 진행된 [PRK.GetLeader]의 연설에서 그는 ‘이 건물로 하여금 이곳을 방문하는 모든 인민이 우리 체제의 우월성과 공화국의 위대함을 배워가게 되기를 바란다’는 말로 그의 포부를 밝혔습니다."
  kor_news.22.a:0 "[PRK.GetName]의 파라오 [PRK.GetLeader]에게 건배!"
  kor_news.22.b:0 "정말 인상적인 양식이야."
  kor_news.22.c:0 "그나마 흉물스러운 티는 벗었군."
  kor_news.22.d:0 "이것은 그 무엇보다도 우리 체제의 우월성을 잘 선전할 것이다!"
  kor_news.22.c:0 "저 해괴한 것이 완공되는 날이 오게 될 줄이야."
+
+ kor_news.23.t:0 "대한민국의 내전 종식"
+ kor_news.23.desc:0 ""
+ kor_news.23.a:0 ""
+ kor_news.23.b:0 ""
+ kor_news.23.c:0 ""
+ kor_news.23.d:0 ""
  
 ################################## 북한 ##############################################
  PRK.13.t:0 "국방위원장의 암살!"
@@ -305,5 +317,4 @@ korea.3.t:0 "1936년의 세계?"
  
  rok_civ.6.t:0 "동원령"
  rok_civ.6.d:0 ""
- rok_civ.6.a:0 "우리 찬란한 조국을 위하여!"
- 
+ rok_civ.6.a:0 "우리 찬란한 조국을 위해!"
