--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -157,6 +157,7 @@ korea.3.t:0 "1936년의 세계?"
  kor_news.5.a:0 ""
  kor_news.5.b:0 ""
  kor_news.5.c:0 ""
+ kor_news.5.d:0 ""
 
  kor_news.6.t:0 "대한민국 해군-일본제국 해군 간의 마찰"
  kor_news.6.d:0 "오늘 오전 일본제국의 영해상에서 일본제국 해군과 대한민국 해군 간의 마찰이 발생했습니다. \n현장의 기자가 취재한 일본제국 해군 구축함 함장의 진술에 따르면 대한민국 해군 소속으로 추정되는 함선이 자국의 영해 근처에서 출현했고, 귀함이 일본제국의 영해로 접근하고 있다는 수 차례의 경고에도 귀항하지 않자 그는 이를 비상사태라고 판단해 주력 함대를 호출했다고 합니다. \n\n상대 측의 함선은 이 움직임을 예상한 듯 일본 제국의 주력 함대가 다가오자 후퇴한 뒤 다른 함대와 합류해 현재 일본 제국의 함대와 영해의 경계에서 대치 중입니다."
