--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -153,11 +153,11 @@ korea.3.t:0 "1936년의 세계?"
  kor_news.4.f:0 "동지여! 전진하자!"
 
  kor_news.5.t:0 "부산 함락"
- kor_news.5.desc:0 "제주런 각 떴다"
- kor_news.5.a:0 ""
- kor_news.5.b:0 ""
- kor_news.5.c:0 ""
- kor_news.5.d:0 ""
+ kor_news.5.desc:0 "'생지옥이 따로 없디 않소?'\n-인터뷰에 응한 익명의 조선인민군 병사, 끝까지 저항하던 대한민국 국군 세력이 전멸한 항구를 둘러보며\n\n수도인 서울을 잃은 한국군은 속절없이 패배를 거듭하며 임시 수도인 부산 지역에 마지막 방어선을 구축했습니다. 극적인 지원이 오지 않는 한 전세의 역전이 불가능하리라는 것을 확신한 그들은 최우선 목표를 적 병력의 퇴치에서 정부 수반과 민간인 대피를 위한 시간 확보로 변경했습니다.\n\n그들은 피난민들이 모인 여러 항구를 둘러 구축된 방어선에서 자위대의 지원과 함께 필사적으로 저항했습니다. 포격으로 하반신을 잃은 부상병마저 동료의 부축을 받으며 기관총을 잡았고, 개중 일부는 자원 입대한 소년병들도 있었습니다. 적은 수의 비전투 요원들은 아이와 여자들을 우선시해 해상자위대와 대한민국 해군의 보호 아래에 제주도와 쓰시마로 향하는 대피선에 동승했고, 마지막 배가 떠날 때까지 대한민국 국군과 자위대는 조선인민군의 공격을 막아냈습니다. 후환을 없애고자 그들을 추격한 조선인민군이었으나, 해군력의 우위를 점하지 못한 그들은 '승패가 완전히 갈린 현 상황에서 무의미한 국력의 소진을 막고자 한다'는 명목으로 일방적인 종전을 선언했습니다."
+ kor_news.5.a:0 "그들은 분전했다."
+ kor_news.5.b:0 "우리가 생각할 수 있는 최악의 결과가 도출될 줄이야."
+ kor_news.5.c:0 "끔찍한 결과다!"
+ kor_news.5.d:0 "잘 싸웠소, 동무."
 
  kor_news.6.t:0 "대한민국 해군-일본제국 해군 간의 마찰"
  kor_news.6.d:0 "오늘 오전 일본제국의 영해상에서 일본제국 해군과 대한민국 해군 간의 마찰이 발생했습니다. \n현장의 기자가 취재한 일본제국 해군 구축함 함장의 진술에 따르면 대한민국 해군 소속으로 추정되는 함선이 자국의 영해 근처에서 출현했고, 귀함이 일본제국의 영해로 접근하고 있다는 수 차례의 경고에도 귀항하지 않자 그는 이를 비상사태라고 판단해 주력 함대를 호출했다고 합니다. \n\n상대 측의 함선은 이 움직임을 예상한 듯 일본 제국의 주력 함대가 다가오자 후퇴한 뒤 다른 함대와 합류해 현재 일본 제국의 함대와 영해의 경계에서 대치 중입니다."
