--- a/localisation/replace/09_kor_ideas_l_english.yml
+++ b/localisation/replace/09_kor_ideas_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
  ### KOR - idea
+ KOR_north_south_problem:0 "남북갈등"
  KOR_imf_economic_crisis:0 "한국 금융위기"
  KOR_imf_economic_crisis_desc:0 "Since 1997, South Korea is experiencing a severe economic crisis."
  KOR_national_security_law:0 "국가보안법"
