--- a/localisation/FoS_opening_l_english.yml
+++ b/localisation/FoS_opening_l_english.yml
@@ -3,11 +3,19 @@
  TNO_DEMO_TEXT_APPEAR: "[GET_CURRENT_INTRO_TEXT]"
  TNO_OPENING_SCREEN_BUTTON_TEXT: "[GET_CLOSEBUTTON_TEXT]"
  TNO_OPENING_SCREEN_BUTTON_TT: "§R전쟁이 곧 다가올 것 같군.§!"
- MOD_FEATURES_TEXT:0 "Fall of Stahlreich 디스코드 "
+ MOD_FEATURES_TEXT:0 "TIME SLIP KOREA 디스코드 "
  MOD_INFO_TEXT:0 ""
 
  TNO_OPENING_SCREEN_BUTTON_TEXT_GER: "전진!"
  TNO_OPENING_SCREEN_BUTTON_TEXT_RUS: "혁명은 계속된다!"
+ 
+ TNO_OPENING_SCREEN_BUTTON_TEXT_KOR: "새로운 시작이다."
+ TNO_OPENING_SCREEN_BUTTON_TEXT_KR1: "바람 앞 등불이군."
+ TNO_OPENING_SCREEN_BUTTON_TEXT_ROK: "호헌철폐 독재타도!"
+ TNO_OPENING_SCREEN_BUTTON_TEXT_MKR: "조국을 위해."
+ 
+ TNO_OPENING_SCREEN_BUTTON_TEXT_KPA: "나의 조국이여.."
+ TNO_OPENING_SCREEN_BUTTON_TEXT_PRK: "수령 동지를 위해!"
 
  COUNTRY_INFO_TEXT: "[GET_COUNTRY_INFO]"
  REGIONAL_INFO_TEXT: "[GET_REGIONAL_INFO]"
@@ -15,3 +23,11 @@
  COUNTRY_INFO_GERMANY:0 ""
 
  COUNTRY_INFO_RUSSIA:0 ""
+ #남조선
+ COUNTRY_INFO_KOR:0 ""
+ COUNTRY_INFO_KR1:0 ""
+ COUNTRY_INFO_ROK:0 ""
+ COUNTRY_INFO_MKR:0 ""
+ #북조선
+ COUNTRY_INFO_PRK:0 ""
+ COUNTRY_INFO_KPA:0 ""
