--- a/localisation/replace/kor_parties_l_english.yml
+++ b/localisation/replace/kor_parties_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
- KOR_communism_party:0 "조선노동당"
- KOR_communism_party_long:0 "조선노동당"
- KOR_democratic_party:0 "민주자유당"
- KOR_democratic_party_long:0 "민주자유당"
- KOR_neutrality_party:0 "하나회"
- KOR_neutrality_party_long:0 "하나회"
- KOR_fascism_party:0 "하나회"
- KOR_fascism_party_long:0 "하나회"
+ KOR_communism_party:0 "통합진보당"
+ KOR_communism_party_long:0 "통합진보당"
+ KOR_democratic_party:0 "한나라당"
+ KOR_democratic_party_long:0 "한나라당"
+ KOR_neutrality_party:0 "한나라당"
+ KOR_neutrality_party_long:0 "한나라당"
+ KOR_fascism_party:0 "대한제국 복권파"
+ KOR_fascism_party_long:0 "대한제국 복권파"
  
  MKR_communism_party:0 "조선노동당"
  MKR_communism_party_long:0 "조선노동당"
