--- a/localisation/replace/kor_countries_l_english.yml
+++ b/localisation/replace/kor_countries_l_english.yml
@@ -19,6 +19,9 @@
  KOR_eok_neutrality_DEF:0 "대한제국"
  KOR_eok_communism:0 "대한제국"
  KOR_eok_communism_DEF:0 "대한제국"
+ KOR_eok_DEF:0 "한국"
+ KOR_eok_ADJ:0 "한국"
+ KOR_eok:0 "한국"
  
  KOR_2009_scenario_fascism:0 "대한민국"
  KOR_2009_scenario_fascism_DEF:0 "대한민국"
@@ -28,6 +31,9 @@
  KOR_2009_scenario_neutrality_DEF:0 "대한민국"
  KOR_2009_scenario_communism:0 "대한민국"
  KOR_2009_scenario_communism_DEF:0 "대한민국"
+ KOR_2009_scenario_DEF:0 "한국"
+ KOR_2009_scenario_ADJ:0 "한국"
+ KOR_2009_scenario:0 "한국"
  
  KR1_fascism:0 "대한제국"
  KR1_fascism_DEF:0 "대한제국"
@@ -141,63 +147,4 @@
  CHI_neutrality:0 "중화민국"
  ITA_fascism:0 "이탈리아 왕국"
  
- MEN_republic_fascism:0 "내몽골국"
- MEN_republic_fascism_DEF:0 "내몽골국"
- MEN_republic_democratic:0 "내몽골 공화국"
- MEN_republic_democratic_DEF:0 "내몽골 공화국"
- MEN_republic_neutrality:0 "내몽골 공화국"
- MEN_republic_neutrality_DEF:0 "내몽골국 공화국"
- MEN_republic_communism:0 대몽골 사회주의 인민국"
- MEN_republic_communism_DEF:0 "대몽골 사회주의 인민국"
- MEN_republic_DEF:0 "내몽골"
- MEN_republic_ADJ:0 "내몽골"
- MEN_republic:0 "내몽골"
- 
- SHX_republic_fascism:0 "대중화국"
- SHX_republic_fascism_DEF:0 "대중화국"
- SHX_republic_democratic:0 "중화 공화국"
- SHX_republic_democratic_DEF:0 "중화 공화국"
- SHX_republic_neutrality:0 "중화 연방국"
- SHX_republic_neutrality_DEF:0 "중화 연방국"
- SHX_republic_communism:0 "중화 사회주의 연방국"
- SHX_republic_communism_DEF:0 "중화 사회주의 연방국"
- SHX_republic_DEF:0 "북중국"
- SHX_republic_ADJ:0 "북중국"
- SHX_republic:0 "북중국"
- 
- GXC_republic_fascism:0 "중화민국 국민정부"
- GXC_republic_fascism_DEF:0 "중화민국 국민정부"
- GXC_republic_democratic:0 "중화민국"
- GXC_republic_democratic_DEF:0 "중화민국"
- GXC_republic_neutrality:0 "중화민국"
- GXC_republic_neutrality_DEF:0 "중화민국"
- GXC_republic_communism:0 "중화인민공화국"
- GXC_republic_communism_DEF:0 "중화인민공화국"
- GXC_republic_DEF:0 "남중국"
- GXC_republic_ADJ:0 "남중국"
- GXC_republic:0 "남중국"
- 
- TAI_republic_fascism:0 "대만 국민정부"
- TAI_republic_fascism_DEF:0 "대만 국민정부"
- TAI_republic_democratic:0 "대만 공화국"
- TAI_republic_democratic_DEF:0 "대만 공화국"
- TAI_republic_neutrality:0 "대만 총독부"
- TAI_republic_neutrality_DEF:0 "대만 총독부"
- TAI_republic_communism:0 "대만 인민공화국"
- TAI_republic_communism_DEF:0 "대만 인민공화국"
- TAI_republic_DEF:0 "대만"
- TAI_republic_ADJ:0 "대만"
- TAI_republic:0 "대만"
- 
- MAN_republic_fascism:0 "만주 자유국"
- MAN_republic_fascism_DEF:0 "만주 자유국"
- MAN_republic_democratic:0 "만주 공화국"
- MAN_republic_democratic_DEF:0 "만주 공화국"
- MAN_republic_neutrality:0 "만주 공화국"
- MAN_republic_neutrality_DEF:0 "만주 공화국"
- MAN_republic_communism:0 대 만주 중화 사회주의 인민국"
- MAN_republic_communism_DEF:0 "대 만주 중화 사회주의 인민국"
- MAN_republic_DEF:0 "만주"
- MAN_republic_ADJ:0 "만주"
- MAN_republic:0 "만주"
  
