--- a/localisation/replace/09_kor_ideas_l_english.yml
+++ b/localisation/replace/09_kor_ideas_l_english.yml
@@ -211,7 +211,7 @@
  KOR_han_river:0 "한강의 기적"
  
  KOR_korean_empire:0 "대한제국 황실"
- future_army_infantry:0 "보병 공격전술가"
+ future_army_infantry:0 "보병 공격전술가\n(미래)"
  
  korean_war:0 "광범위한 징병"
  korean_war2:0 "국민 총동원령"
