남한포커스 초기작업
ㅇㅇ

--- a/localisation/rok_focus_l_english.yml
+++ b/localisation/rok_focus_l_english.yml
@@ -97,7 +97,7 @@ i:
  ROK_pan_earth_union:0 "범 지구 연방"
  ROK_south_american_fascism_attack:0 "남아메리카를 보호"
  ROK_protect_spain_democracy:0 "에스파냐를 압박"
- ROK_earth_liberty's_defencer:0 "지구 자유의 수호자"
+ ROK_earth_libertys_defencer:0 "지구 자유의 수호자"
  ROK_bokji_of_20th_end:0 "20세기 후반의 인권보장"
  ROK_happy_korea:0 "살기좋은 우리나라로 이민오세요"
  ROK_many_culture:0 "다문화 가정인식 개편"
