--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 ################################## EVENTS ##############################################
  egg.1.t:0 "수상한 유적"
- egg.1.d:0 "마다가스카르에 상륙한 아군의 전초기지에서 흥미로운 소식이 전달됐습니다. 그들은 마다가스카르의 내륙에서 어떤 유적이 거대한 벽의 잔해로 추정되는 유적에서 구시가지의 잔해와 함께 발견됐다고 합니다. 해당 유적에서 발견된 문서와 그림을 조사해본 그들의 보고에 따르면 벽은 원형을 띄며 총 3중으로 쌓여있었다고 합니다. 섬의 대부분을 차지할 정도로 거대한 이 유적을 왜 프랑스가 못 찾아낸 것인지 의심스러우나, 그를 차치하고서도 우리는 우리의 수중에 들어온 이 유적의 처우를 결정지을 필요가 있어 보입니다."
+ egg.1.d:0 "마다가스카르에 상륙한 아군의 전초기지에서 흥미로운 소식이 전달됐습니다. 그들은 마다가스카르의 내륙에서 어떤 유적을 거대한 벽의 잔해로 추정되는 유적에서 구시가지의 잔해와 함께 발견했다고 합니다. 해당 유적에서 발견된 문서와 그림을 조사해본 그들의 보고에 따르면 벽은 원형을 띄며 총 3중으로 쌓여있었다고 합니다. 섬의 대부분을 차지할 정도로 거대한 이 유적을 왜 프랑스가 못 찾아낸 것인지 의심스러우나, 그를 차치하고서도 우리는 우리의 수중에 들어온 이 유적의 처우를 결정지을 필요가 있어 보입니다."
  egg.1.a:0 "추가적인 예산을 편성해야겠군."
  egg.1.b:0 "섬의 요새화가 우선이다."
  
