--- a/localisation/replace/09_kor_ideas_l_english.yml
+++ b/localisation/replace/09_kor_ideas_l_english.yml
@@ -135,6 +135,7 @@
  choi_yunhoi:0 "최 윤희"
  hwang_kicheol:0 "황 기철"
  kim_sungho:0 "김 성호"
+ ahn_cheolsoo:0 "안 철수"
  
  moon_jaein:0 "문 재인"
  lee_myung_bak_pre:0 "이명박 대통령"
@@ -163,6 +164,8 @@
  KOR_making_sorry:0 "아직 제작 중입니다! 후에 업데이트로 찾아뵐 수 있습니다"
  
  united_state_of_human_wargoal:0 "지구연방 건설"
+ 
+ KOR_ahn_trait:0 "안철수연구소"
  
  nine_doosanDST:0 "두산DST"
  nine_samsungtec:0 "삼성테크원"
