--- a/localisation/replace/kor_terrain_l_english.yml
+++ b/localisation/replace/kor_terrain_l_english.yml
@@ -7,3 +7,11 @@
  busan_desc:0 ""
  incheon:0 "인천"
  incheon_desc:0 ""
+ daejeon:0 "대전"
+ daejeon_desc:0 ""
+ daegu:0 "대구"
+ daegu_desc:0 ""
+ ulsan:0 "울산"
+ ulsan_desc:0 ""
+ gwangju:0 "광주"
+ gwangju_desc:0 ""
