--- a/localisation/replace/09_kor_ideas_l_english.yml
+++ b/localisation/replace/09_kor_ideas_l_english.yml
@@ -76,6 +76,10 @@
  
  KOR_president_moon_disaster:0 "문재인 대통령"
  
+ KOR_09_modern_millitary:0 "미래 국군 - 2009년의 대한 육군"
+ KOR_modern_airforce:0 "미래 국군 - 2009년의 대한 공군"
+ KOR_09_modern_navy:0 "미래 국군 - 2009년의 대한 해군"
+ 
  KOR_roh_trait:0 "사람사는 세상"
  KOR_moon_trait:0 "인권 변호사"
  KOR_hong_trait:0 "모래시계 검사"
