--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -260,6 +260,9 @@ korea.3.t:0 "1936년의 세계?"
  kor_news.23.b:0 "이것은 우리에게 기회가 될 것이다!"
  kor_news.23.c:0 "언제나 그랬듯이."
  kor_news.23.d:0 "어쩌면 지금이 기회가 되지 않을까?"
+
+ kor_news.24.t:0 "천안함 폭침"
+ kor_news.24.desc:0 ""
  
 ################################## 북한 ##############################################
  PRK.13.t:0 "국방위원장의 암살!"
