민주정부 초기
ㅇㅇ

--- a/localisation/replace/rok_focus_l_english.yml
+++ b/localisation/replace/rok_focus_l_english.yml
@@ -4,7 +4,7 @@
  President_Kim_Koo:0 "김구 대통령"
  new_national_security_law:0 "새 국가보안법"
  welfare_policy:0 "복지정책 도입"
- contact_with_NK:0 "북한과 접촉"
+ contact_with_NK:0 "노조와 협상"
  libration:0 "자유국가"
  President_Kim_Young_sam:0 "김영삼 대통령"
  enactment_of_law:0 "국가안전기획부 약화"
@@ -13,7 +13,7 @@
  test_Japan:0 "일본을 시험하다"
  Contact_with_China:0 "중국에 접촉"
  intervention_in_the_civil_war:0 "국공내전 개입"
- war_of_liberation:0 "일본 해방전쟁"
+ war_of_liberation:0 "자위대와 협상"
  an_ultimatum_to_Japan:0 "일본에 최후통첩"
  elimination_of_censorship:0 "검열 철폐"
  test_China:0 "중국을 시험하다"
