--- a/localisation/replace/kor_ideas_l_english.yml
+++ b/localisation/replace/kor_ideas_l_english.yml
@@ -63,6 +63,26 @@
  MKR_han_riv:0 "한강의 기적"
  mkr_ships_focus:0 "조선국"
  MKR_trade_goods:0 "무역품수출허가" 
+ 
+ ### ROK
+ 
+ rok_remnants_of_the_military:0 "군부의잔재"
+ rok_remnants_of_the_military_desc:0 "내전에도 불구하고, 하나회의 잔재는 군대 곳곳에 남아있습니다. 이들을 완전뿌리뽑지않는이상 우리군대의 약점으로 작용할것입니다. §R시간내에 군부의잔재를 소탕하지못하면,남은 하나회세력이 음모를 꾸밀것입니다!!§!"
+ 
+ rok_National_Security_Act:0 "국가보안법"
+ rok_National_Security_Act_desc:0 ""
+ 
+ rok_Welfare_Policy:0 "복지정책"
+ rok_Welfare_Policy_desc:0 ""
+ 
+ rok_Divided_politics:0 "분열된정계"
+ rok_Divided_politics_desc:0 ""
+ 
+ 
+ rok_chun:0 "구속된 전두환"
+ 
+ rok_roh:0 "구속된 노태우"
+ 
  ### KOR - Human
  chung_won_sik:0 "정 원식"
  lee_young_man:0 "이 용만"
