천안함 피격 이벤트

--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -28,7 +28,7 @@
  korea.2.a:0 "오랜 숙원을 이룰 때이다!"
  korea.2.b:0 "성급히 판단해선 안 된다."
  
- korea.3.t:0 "1936년의 세계?"
+korea.3.t:0 "1936년의 세계?"
  korea.3.d:0 "1991년이 끝나가던 날, 우리는 알 수 없는 기현상에 휩쓸렸습니다, 이 현상이 끝나고 정신을 차렸을 때의 우리는 기이한 세상으로 오고 만 뒤였습니다 대외적인 통신은 모두 끊겼고, 국민들은 이에 혼란해하고 있습니다. 또한 동해에서 초계 임무 중이던 제1함대가 일본 "해상자위대"가 아닌 일본"제국"의 함선과 접촉한 것 같다고 보고해왔습니다..."
  korea.3.a:0 "...뭐?"
  
@@ -37,7 +37,7 @@
  korea.4.a:0 "이 국가가 멸망하려는 것인가?"
 
  korea.5.t:0 "비상계엄 선포"
- korea.5.d:0 "오늘 아침 일찍, 근황과 같은 재난에 대비하고자 비상계엄조치가 발령되었으며 그에 따라 군이 치안을 담당하고 국민들의 일부 자유가 제한됨이 발표되었습니다. 하지만 군부 독재의 쓰라린 역사를 겪은 국민에게 이에 대한 이해심을 비는 것은 헛된 희망이었습니다. 그들은 얼마 지나지 않아 [KR1.GetLeader] 대통령이 독재의 꿈을 꾸고 있다며 그를 규탄하기 시작했고, 계엄령 철회를 요구하는 집회를 개시하기 시작했습니다."
+ korea.5.d:0 "오늘 아침 일찍, 근황과 같은 재난에 대비하고자 비상계엄조치가 발령되었으며 그에 따라 군이 치안을 담당하고 국민들의 일부 자유가 제한됨이 발표되었습니다. 하지만 군부 독재의 쓰라린 역사를 겪은 국민에게 이에 대한 이해심을 비는 것은 헛된 희망이었습니다. 그들은 얼마 지나지 않아 [KOR.GetLeader] 대통령이 독재의 꿈을 꾸고 있다며 그를 규탄하기 시작했고, 계엄령 철회를 요구하는 집회를 개시하기 시작했습니다."
  korea.5.a:0 "이것은 그들의 생각과 무관하게 필연적이며 불가피한 조치이다."
  
  korea.6.t:0 "주한미군 문제"
@@ -53,7 +53,7 @@
  korea.8.a:0 "철저히 막아라."
  
  korea.9.t:0 "국회 해산"
- korea.9.d:0 "비상계엄조치의 일환으로 국회가 군대에 의해 해산되었고, 현 상황의 파악과 해결이 끝나기 전까지는 [KR1.GetLeader] 대통령이 전권을 행사하게 될 것입니다. 이에 많은 시민들이 국가가 광기와 군부 독재로 얼룩진 1980년대로 회귀하려 한다며 크게 반발하기 시작했고, 일부 지역에서는 이미 조직적인 저항이 발생하고 있다는 듯 합니다."
+ korea.9.d:0 "비상계엄조치의 일환으로 국회가 군대에 의해 해산되었고, 현 상황의 파악과 해결이 끝나기 전까지는 [KOR.GetLeader] 대통령이 전권을 행사하게 될 것입니다. 이에 많은 시민들이 국가가 광기와 군부 독재로 얼룩진 1980년대로 회귀하려 한다며 크게 반발하기 시작했고, 일부 지역에서는 이미 조직적인 저항이 발생하고 있다는 듯 합니다."
  korea.9.a:0 "이것은 일시적인 조치일 뿐이다."
  
  korea.10.t:0 "주한미군의 참전 선언"
@@ -114,11 +114,6 @@
  mkorea.7.a:0 "사소한 것에 신경 쓸 여유는 없다."
  mkorea.7.b:0 "그들은 살려둘 가치가 있다."
  
- 
- mkorea.52.t:0 "772함 수병은 귀환하라"
- mkorea.52.d:0 "772함 나와라\n온 국민이 애타게 기다린다. \n\n칠흑의 어두움도 \n서해의 그 어떤 급류도 \n당신들의 귀환을 막을 수 없다 \n작전지역에 남아있는 772함 수병은 즉시 귀환하라.\n전선의 초계는 이제 전우들에게 맡기고\n오로지 살아서 귀환하라.\n이것이 그대들에게 대한민국이 부여한 마지막 명령이다.\n\n대한민국을 보우하시는 하나님이시여,\n\n아직도 작전지역에 남아 있는\n우리 772함 수병을 구원하소서.\n\n우리 마흔 여섯 명의 대한의 아들들을\n차가운 해저에 외롭게 두지 마시고\n온 국민이 기다리는 따듯한 집으로 생환시켜 주소서.\n부디\n그렇게 해 주소서."
- mkorea.52.a:0 "그들을 진심으로 추모한다."
- 
 #######################민주
  
  rok.1.t:0 "14대 대선"
@@ -126,56 +121,6 @@
  rok.1.a:0 "김영삼 대통령!"
  rok.1.b:0 "김구 대통령!"
  
- rok.5.t:0 "조선총독부 철거?"
- rok.5.d:0 "."
- rok.5.a:0 ""
- 
- rok.6.t:0 "자위대로부터의 경고"
- rok.6.d:0 "동해에서 충돌이있은이후, 쓰시마의 해상자위대로부터의 무전이 들려왔습니다. '동해상에있는 모든 일본제국해군,대한민국해군 함정은 즉시 평화를위협하는 적대행위를 중단하라'라는 내용이였습니다 이들은 또한 '그어느측이든 계속 적대행위를 지속한다면 자위대는 평화수호를위해 싸울것이다.'라는 내용을 추가로 전송하였습니다. 우리는 일단 한발물러서는수밖에 없을것같습니다."
- rok.6.a:0 "왜 저들도 같이 와가지고는..."
- 
- rok.8.t:0 "한국통신 파업사태"
- rok.8.d:0 ""
- rok.8.a:0 ""
- 
- rok.9.t:0 "두 전직대통령 문제"
- rok.9.d:0 ""
- rok.9.a:0 "당장구속하라!"
- rok.9.b:0 "사면하라"
- 
- rok.10.t:0 "중국에 접촉하다"
- rok.10.d:0 ""
- rok.10.a:0 "우리의 친구를위해"
- 
- rok.11.t:0 "장제스와의 회담"
- rok.11.d:0 ""
- rok.11.a:0 "장비의 면허생산을 허가한다"
- rok.11.b:0 "구식장비 일부를 넘겨준다"
- rok.11.c:0 "산업기술자를 지원해준다"
- 
- rok.12.t:0 "상하이 도발"
- rok.12.d:0 ""
- rok.12.a:0 "훌륭하군."
- 
- rok.13.t:0 "장제스에게 요구하다"
- rok.13.d:0 ""
- rok.13.a:0 "간도를 요구한다."
- rok.13.b:0 "대만을 요구한다."
- rok.13.c:0 "둘다 요구한다!"
- 
- rok.14.t:0 "한국이 우리에게 영토를 요구하다"
- rok.14.d:0 ""
- rok.14.a:0 "어림도없다!"
- rok.14.b:0 "우리는 그들의 힘이 필요하다."
- 
- rok.15.t:0 "한국이 우리에게 영토를 요구하다"
- rok.15.d:0 ""
- rok.15.a:0 "어림도없다!"
- rok.15.b:0 "우리는 그들의 힘이 필요하다."
- 
- mkorea.51.t:0 "동해교전"
- mkorea.51.d:0 "."
- mkorea.51.a:0 ""
  
  ############################뉴스
  
@@ -244,8 +189,8 @@
  
  
  
- kor_news.13.t:0 "동해 충돌"
- kor_news.13.desc:0 "동해상의 해역에서 일본제국 해군과 대한민국해군의 충돌이 일어났습니다.\n 들리는소식에의하면, 일본 함대의 피해는 걷잡기 힘든 상태인 것으로 보고됩니다. \n누가먼저 선제발포를 시작하였는지는 알수없으나,동해상에서 양국 해군의 교전이 시작되었습니다. \n결과는 처참했습니다. \n포항급 초계함에서 발사된 대함미사일이 일본제국 해군 항공모함을 꿰뚫었고, 이내 두 척의 항공모함은 바다 속으로 모습을 감추었습니다. \n주도권을 빼앗긴 일본제국 해군은 최대한 응전하고자 했지만 그들은 결국 상처만 남은 채로 귀항해야 했습니다."
+ kor_news.13.t:0 "독도 충돌"
+ kor_news.13.desc:0 "대한민국의 영해에서 일본제국 해군이 대한민국을 향한 무력 도발을 감행했습니다.\n 이는 이전의 대한민국 해군의 도발에 대한 보복성 공격인 것으로 보이나, 일본 함대의 피해는 걷잡기 힘든 상태인 것으로 보고됩니다. 일본함대를 처음포착한 독도경비대가 이를보고하였고\n일본제국의 대규모 기습으로 판단한 대한민국 해군사령부는 함대를 급히 파견했으며,대한민국 함대가 선제공격을 하면서 양국 해군의 교전이 시작되었습니다. \n\n 결과는 처참했습니다. \n포항급 초계함에서 발사된 '하푼' 대함미사일이 일본제국 해군 항공모함 '류조'와 '카가'를 꿰뚫었고, 이내 두 척의 항공모함은 바다 속으로 모습을 감추었습니다. \n주도권을 빼앗긴 일본제국 해군은 최대한 응전하고자 했지만 그들은 결국 상처만 남은 채로 귀항해야 했습니다."
  kor_news.13.a:0 "대체 저들의 무기의 파괴력은 어느정도인거지..."
  kor_news.13.b:0 "멍청한 놈들!"
  kor_news.13.c:0 "일제 놈들의 야망은 분쇄되리라!" 
@@ -315,6 +260,13 @@
  kor_news.23.b:0 "이것은 우리에게 기회가 될 것이다!"
  kor_news.23.c:0 "언제나 그랬듯이."
  kor_news.23.d:0 "어쩌면 지금이 기회가 되지 않을까?"
+
+ kor_news.24.t:0 "천안함 침몰"
+ kor_news.24.desc:0 "-추정되는 바로는- 어젯밤 9시경, 대한민국 영해 내의 도서인 백령도의 인근 해역에서 대한민국 해군의 초계함인 천안함이 불명의 이유로 침몰하는 사건이 발생했습니다. 현재 해당 해역에서 대한민국 해군의 주도 하에 승조원의 구조 작업이 진행되고 있으며 이번 천안함 침몰 사건의 원인을 규명할 조사단이 조직 중이고, 정보 수집을 위한 수사가 한창입니다. 한편 동시적인 폭음이 1~2차례 들렸다는 생존자의 증언과 해상에서 약 100m의 흰 섬광 기둥을 관측했다는 백령도 해안 초병의 증언은 사고가 발생한 해역이 대한민국의 적성국인 [PRK.GetName]의 영해와 인접하다는 사실과 맞물려 이번 사건이 [PRK.GetName]의 소행이 아니냐는 여론을 형성하고 있습니다. 대한민국 정부 또한 이와 관련해 [PRK.GetName] 정부에 추궁을 했으나, 그들은 아직까지 확답을 주저하고 있는 상태입니다. 현재까지 대한민국 정부에 의해 공식적으로 발표된 생존자는 함장인 최원일 중령과 부장인 김덕원 소령, 작전관 박연수 대위를 비롯한 58명입니다."
+ kor_news.24.a:0 "한반도의 긴장이 고조되고 있다."
+ kor.news.24.b:0 "죽일 놈들!"
+ kor.news.24.c:0 "우리는 한 마디도 해줄 수 없다."
+
  
 ################################## 북한 ##############################################
  PRK.13.t:0 "국방위원장의 암살!"
@@ -374,5 +326,3 @@
  rok_civ.6.t:0 "동원령"
  rok_civ.6.d:0 ""
  rok_civ.6.a:0 "우리 찬란한 조국을 위해!"
- 
- remove_mkr:0 "§G군사정부의 잔재들이 제거될것입니다§!"
