--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -319,7 +319,7 @@
  kor_news.25.t:0 "천안함 침몰"
  kor_news.25.desc:0 "-추정되는 바로는- 어젯밤 9시경, 대한민국 영해 내의 도서인 백령도의 인근 해역에서 대한민국 해군의 초계함인 천안함이 불명의 이유로 침몰하는 사건이 발생했습니다. 현재 해당 해역에서 대한민국 해군의 주도 하에 승조원의 구조 작업이 진행되고 있으며 이번 천안함 침몰 사건의 원인을 규명할 조사단이 조직 중이고, 정보 수집을 위한 수사가 한창입니다. 한편 동시적인 폭음이 1~2차례 들렸다는 생존자의 증언과 해상에서 약 100m의 흰 섬광 기둥을 관측했다는 백령도 해안 초병의 증언은 사고가 발생한 해역이 대한민국의 적성국인 [PRK.GetName]의 영해와 인접하다는 사실과 맞물려 이번 사건이 [PRK.GetName]의 소행이 아니냐는 여론을 형성하고 있습니다. 대한민국 정부 또한 이와 관련해 [PRK.GetName] 정부에 추궁을 했으나, 그들은 아직까지 확답을 주저하고 있는 상태입니다."
  kor_news.25.a:0 "한반도의 긴장이 고조되고 있다."
- kor_news.25.b:0 "[PRK.GetName] 놈들이 여기 관여한 것이 분명하다!"
+ kor_news.25.b:0 "[PRK.GetName] 놈들이 여기 관여한 게 분명하다!"
  kor_news.25.c:0 "우리는 한 마디도 해줄 수 없다."
  
 ################################## 북한 ##############################################
