--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -116,7 +116,7 @@
  
  
  mkorea.52.t:0 "772함 수병은 귀환하라"
- mkorea.52.d:0 "772함 나와라\n온 국민이 애타게 기다린다. \n\n칠흑의 어두움도 \n서해의 그 어떤 급류도 \n당신들의 귀환을 막을 수 없다 \n작전지역에 남아있는 772함 수병은 즉시 귀환하라.\n전선의 초계는 이제 전우들에게 맡기고\n오로지 살아서 귀환하라.\n이것이 그대들에게 대한민국이 부여한 마지막 명령이다.\n\n대한민국을 보우하시는 하나님이시여,\n\n아직도 작전지역에 남아 있는\n우리 772함 수병을 구원하소서.\n\n우리 마흔 여섯 명의 대한의 아들들을\n차가운 해저에 외롭게 두지 마시고\n온 국민이 기다리는 따듯한 집으로 생환시켜 주소서.\n부디\n그렇게 해 주소서."
+ mkorea.52.d:0 "772함 나와라\n온 국민이 애타게 기다린다. \n\n칠흑의 어두움도 \n서해의 그 어떤 급류도 \n당신들의 귀환을 막을 수 없다 \n작전지역에 남아있는 772함 수병은 즉시 귀환하라.\n\n772함 나와라\n\n그대들 임무 이미 종료되었으니\n이 밤이 다가기 전에 귀대하라.\n\n772함 나와라\n\n거치른 물살 헤치고 바다위로 부상하라\n온 힘을 다하며 우리 곁으로 돌아오라.\n\n772함 나와라\n\n우리가 내려간다\n우리가 내려 갈 때 까지 버티고 견디라.\n\n전선의 초계는 이제 전우들에게 맡기고\n오로지 살아서 귀환하라.\n이것이 그대들에게 대한민국이 부여한 마지막 명령이다.\n\n대한민국을 보우하시는 하나님이시여,\n\n아직도 작전지역에 남아 있는\n우리 772함 수병을 구원하소서.\n\n우리 마흔 여섯 명의 대한의 아들들을\n차가운 해저에 외롭게 두지 마시고\n온 국민이 기다리는 따듯한 집으로 생환시켜 주소서.\n부디\n그렇게 해 주소서."
  mkorea.52.a:0 "그들을 진심으로 추모한다."
  
 #######################민주
@@ -319,7 +319,7 @@
  kor_news.25.t:0 "천안함 침몰"
  kor_news.25.desc:0 "-추정되는 바로는- 어젯밤 9시경, 대한민국 영해 내의 도서인 백령도의 인근 해역에서 대한민국 해군의 초계함인 천안함이 불명의 이유로 침몰하는 사건이 발생했습니다. 현재 해당 해역에서 대한민국 해군의 주도 하에 승조원의 구조 작업이 진행되고 있으며 이번 천안함 침몰 사건의 원인을 규명할 조사단이 조직 중이고, 정보 수집을 위한 수사가 한창입니다. 한편 동시적인 폭음이 1~2차례 들렸다는 생존자의 증언과 해상에서 약 100m의 흰 섬광 기둥을 관측했다는 백령도 해안 초병의 증언은 사고가 발생한 해역이 대한민국의 적성국인 [PRK.GetName]의 영해와 인접하다는 사실과 맞물려 이번 사건이 [PRK.GetName]의 소행이 아니냐는 여론을 형성하고 있습니다. 대한민국 정부 또한 이와 관련해 [PRK.GetName] 정부에 추궁을 했으나, 그들은 아직까지 확답을 주저하고 있는 상태입니다."
  kor_news.25.a:0 "한반도의 긴장이 고조되고 있다."
- kor_news.25.b:0 "[PRK.GetName] 놈들이 여기 관여한 게 분명하다!"
+ kor_news.25.b:0 "죽일 놈들!"
  kor_news.25.c:0 "우리는 한 마디도 해줄 수 없다."
  
 ################################## 북한 ##############################################
