--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -128,7 +128,8 @@
  
  rok.5.t:0 "조선총독부 철거?"
  rok.5.d:0 "."
- rok.5.a:0 ""
+ rok.5.a:0 "보존할가치가있다, 다른곳으로 이전시키자"
+ rok.5.b:0 "저 흉측한것을 없애버려라!"
  
  rok.6.t:0 "자위대로부터의 경고"
  rok.6.d:0 "동해에서 충돌이있은이후, 쓰시마의 해상자위대로부터의 무전이 들려왔습니다. '동해상에있는 모든 일본제국해군,대한민국해군 함정은 즉시 평화를위협하는 적대행위를 중단하라'라는 내용이였습니다 이들은 또한 '그어느측이든 계속 적대행위를 지속한다면 자위대는 평화수호를위해 싸울것이다.'라는 내용을 추가로 전송하였습니다. 우리는 일단 한발물러서는수밖에 없을것같습니다."
@@ -168,10 +169,49 @@
  rok.13.a:0 "어림도없다!"
  rok.13.b:0 "우리는 그들의 힘이 필요하다."
  
- rok.14.t:0 "한국이 우리에게 영토를 요구하다"
- rok.14.d:0 ""
- rok.14.a:0 "어림도없다!"
- rok.14.b:0 "우리는 그들의 힘이 필요하다."
+ rok.24.t:0 "한국이 연합국가입을 요청하다"
+ rok.24.d:0 ""
+ rok.24.a:0 "좋지."
+ rok.24.b:0 "거부한다!"
+ 
+ rok.25.t:0 "영국이 우리의 요청을 수락하다."
+ rok.25.d:0 ""
+ rok.25.a:0 "좋군"
+ 
+ rok.26.t:0 "영국이 우리의 요청을 거부하다."
+ rok.26.d:0 ""
+ rok.26.a:0 "제기랄"
+ 
+ rok.27.t:0 "한국이 우리에게 협조를 요청하다."
+ rok.27.d:0 ""
+ rok.27.a:0 "실행에 착수하도록하지"
+ rok.27.b:0 "아메리카는 우리의 구역이다!"
+ 
+ rok.28.t:0 "미국이 우리의 요청을 수락하다."
+ rok.28.d:0 ""
+ rok.28.a:0 "자! 들어가자!"
+ 
+ rok.29.t:0 "미국이 우리의 요청을 거부하다."
+ rok.29.d:0 ""
+ rok.29.a:0 "나쁜소식이군"
+ 
+ rok.30.t:0 "한국이 우리에게 협조를 요청하다."
+ rok.30.d:0 ""
+ rok.30.a:0 "실행에 착수하도록하지"
+ rok.30.b:0 "안돼!"
+ 
+ rok.31.t:0 "영국이 우리의 요청을 수락하다."
+ rok.31.d:0 ""
+ rok.31.a:0 "자! 들어가자!"
+ 
+ rok.32.t:0 "영국이 우리의 요청을 거부하다."
+ rok.32.d:0 ""
+ rok.32.a:0 "나쁜소식이군"
+ 
+ rok.33.t:0 "국제연합의 수립."
+ rok.33.d:0 ""
+ rok.33.a:0 "좋군"
+ 
  
  mkorea.51.t:0 "동해교전"
  mkorea.51.d:0 "."
@@ -317,10 +357,15 @@
  kor_news.23.d:0 "어쩌면 지금이 기회가 되지 않을까?"
  
  kor_news.25.t:0 "천안함 침몰"
- kor_news.25.desc:0 "-추정되는 바로는- 어젯밤 9시경, 대한민국 영해 내의 도서인 백령도의 인근 해역에서 대한민국 해군의 초계함인 천안함이 불명의 이유로 침몰하는 사건이 발생했습니다. 현재 해당 해역에서 대한민국 해군의 주도 하에 승조원의 구조 작업이 진행되고 있으며 이번 천안함 침몰 사건의 원인을 규명할 조사단이 조직 중이고, 정보 수집을 위한 수사가 한창입니다. 한편 동시적인 폭음이 1~2차례 들렸다는 생존자의 증언과 해상에서 약 100m의 흰 섬광 기둥을 관측했다는 백령도 해안 초병의 증언은 사고가 발생한 해역이 대한민국의 적성국인 [PRK.GetName]의 영해와 인접하다는 사실과 맞물려 이번 사건이 [PRK.GetName]의 소행이 아니냐는 여론을 형성하고 있습니다. 대한민국 정부 또한 이와 관련해 [PRK.GetName] 정부에 추궁을 했으나, 그들은 아직까지 확답을 주저하고 있는 상태입니다."
+ kor_news.25.desc:0 "어젯밤 9시경, 대한민국 영해 내의 도서인 백령도의 인근 해역에서 대한민국 해군의 초계함인 천안함이 불명의 이유로 침몰하는 사건이 발생했습니다.\n\n현재 해당 해역에서 대한민국 해군의 주도 하에 승조원의 구조 작업이 진행되고 있으며 이번 천안함 침몰 사건의 원인을 규명할 조사단이 조직 중이고, 정보 수집을 위한 수사가 한창입니다.\n한편 동시적인 폭음이 1~2차례 들렸다는 생존자의 증언과 해상에서 약 100m의 흰 섬광 기둥을 관측했다는 백령도 해안 초병의 증언은 사고가 발생한 해역이 대한민국의 적성국인 [PRK.GetName]의 영해와 인접하다는 사실과 맞물려\n이번 사건이 [PRK.GetName]의 소행이 아니냐는 여론을 형성하고 있습니다."
  kor_news.25.a:0 "한반도의 긴장이 고조되고 있다."
  kor_news.25.b:0 "죽일 놈들!"
  kor_news.25.c:0 "우리는 한 마디도 해줄 수 없다."
+ 
+ kor_news.28.t:0 "국제연합의 설립"
+ kor_news.28.desc:0 "오늘. 부산,해운대에서 국제연합본부의 완공기념식이 개최되었습니다. 이건물은 1952년당시 뉴욕에 건축되었었던 국제연합본부를 본따 설계되었으며, 기념식에는 각국인사들이 참여하였습니다.\n\n대한민국 대통령 [ROK.GetLeader]는 연설에서 '세계는이미 2번의 대전쟁을 거쳤으며, 과오가반복되지않도록 모든국가의 참여가 중요하다'라는 말을 남겼습으며, 지구의 모든국가가 참여하는게 중요하다고 강조했습니다.\n\n한편, 국제연합의 상임이사국으로 [ROK.GetName]과 [ENG.GetName],[FRA.GetName],[SOV.GetName],[USA.GetName],[JAP.GetName],[CHI.GetName]들이있습니다."
+ kor_news.28.a:0 "더이상의 대전쟁은 안된다."
+ kor_news.28.b:0 "국제연합이 세계평화를 지킬것이다."
  
 ################################## 북한 ##############################################
  PRK.13.t:0 "국방위원장의 암살!"
