--- a/localisation/replace/kor_ideas_l_english.yml
+++ b/localisation/replace/kor_ideas_l_english.yml
@@ -83,6 +83,8 @@
  
  rok_roh:0 "구속된 노태우"
  
+ rok_UN_PMNS:0 "UN안전보장이사회 상임이사국"
+ rok_UN:0 "국제연합 가입국" 
  ### KOR - Human
  chung_won_sik:0 "정 원식"
  lee_young_man:0 "이 용만"
