--- a/localisation/replace/rok_focus_l_english.yml
+++ b/localisation/replace/rok_focus_l_english.yml
@@ -68,7 +68,7 @@
  ROK_panho:0 "판호법 도입"
  ROK_germans_attack:0 "독일의 위협 홍보"
  ROK_auschibitz:0 "절멸계획 알리기"
- ROK_national_attack:0 "국민주의 분쇄작전"
+ ROK_national_attack:0 "전체주의 분쇄작전"
  ROK_military_reform:0 "하나회 잔당 소거"
  ROK_korean_tech_none-law:0 "미래기술보호법"
  ROK_build_the_wall:0 "한국의 장벽 건설"
@@ -94,9 +94,9 @@
  ROK_east_south_asian_nationalism:0 "동남아 민족주의를 아시아 연방으로"
  ROK_koreas_United_nation:0 "한국이 주도하는 UN"
  ROK_pan_earth_union:0 "범 지구 연방"
- ROK_south_american_fascism_attack:0 "남아메리카를 보호"
+ ROK_south_american_fascism_attack:0 "소비에트연방 침공"
  ROK_protect_spain_democracy:0 "에스파냐를 압박"
- ROK_earth_liberty's_defencer:0 "지구 자유의 수호자"
+ ROK_earth_libertys_defencer:0 "지구 자유의 수호자"
  ROK_bokji_of_20th_end:0 "20세기 후반의 인권보장"
  ROK_happy_korea:0 "살기좋은 우리나라로 이민오세요"
  ROK_many_culture:0 "다문화 가정인식 개편"
