--- a/localisation/replace/rok_focus_l_english.yml
+++ b/localisation/replace/rok_focus_l_english.yml
@@ -82,7 +82,7 @@
  ROK_gospel_reform:0 "현대식 교리 재편"
  ROK_the_plan_of_tiger:0 "개호주 계획"
  ROK_with_usa:0 "미국을 초청하다"
- ROK_hawwai_defence:0 "진주만은 없다"
+ ROK_hawwai_defence:0 "주한미군 문제"
  ROK_plan_green:0 "작전명 초록"
  ROK_plan_black:0 "작전명 검정"
  ROK_new_general:0 "새로운 장교들"
@@ -93,7 +93,7 @@
  ROK_democracy_is_best:0 "자유와 민주주의 알리기"
  ROK_east_south_asian_nationalism:0 "동남아 민족주의를 아시아 연방으로"
  ROK_koreas_United_nation:0 "한국이 주도하는 UN"
- ROK_pan_earth_union:0 "범 지구 연방"
+ ROK_pan_earth_union:0 "지구연방 수립"
  ROK_south_american_fascism_attack:0 "소비에트연방 침공"
  ROK_protect_spain_democracy:0 "에스파냐를 압박"
  ROK_earth_libertys_defencer:0 "지구 자유의 수호자"
