--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -16,7 +16,7 @@
  
  kor_big_event_south_Unification_T:0 "통일"
  kor_big_event_south_Unification_A:0 "통일된 조국은 아름답구나."
- kor_big_event_south_Unification_D:0 "멸공의 횃불아래.\n목숨을 건다.\n-무명의 병사"
+ kor_big_event_south_Unification_D:0 "꽃잎처럼 떨어져 간\n전우야 잘 자라.\n-무명의 병사"
  
  korea.1.t:0 "전국적인 군사적 반란"
  korea.1.desc:0 "전국적으로 시위 진압 명령이 하달된 후 지방의 부대에서부터 시작해 현지 병력의 지휘부와 국군지휘통신사령부 간의 통신이 불명의 원인으로 차례차례 두절되기 시작했습니다. 서울의 소요사태는 성공적으로 진압됐으며 수도권과 최전방에 배치된 병력을 우리의 통제 하에 두는 데에는 성공했지만, 지방으로 시위 진압을 위해 파견한 일부 기계화보병 부대와 기갑여단과 연락이 끊겼습니다. 이런 현황으로 유추된 바에 따르면 현재 우리는 한반도의 중부에 남부의 통제권을 잃고 웅크리고 있는 형세입니다."
@@ -63,6 +63,10 @@
  korea.11.t:0 "패잔병의 재편성"
  korea.11.d:0 "서울의 군사정부가 붕괴된 후, 군사정부 통제하에 있던 사단들은 무작정 남쪽으로 후퇴해 우리에게 투항하였습니다. 비록 한때의 적이었지만 일단 눈앞의 북한군을 막기 위해 사령부는 이들을 전투에 투입하는 것을 허용하였습니다. 대부분의 사단들이 심각한 피해를 입은 상태였지만 후방인 부산에서 재편성된 사단들은 병사 한 명이 절박한 우리에게 큰 도움이 될 것입니다."
  korea.11.a:0 "아주 좋군."
+ 
+ korea.21.t:0 "잔존 하나회세력의 반란!!"
+ korea.21.d:0 "우리가 하나회 숙청에 밍기적대는동안,하나회에서 먼저 선수를쳤습니다!! 보안사령관'서완수'중장과 육군참모총장'김진영'을 필두로한 반란군세력들이 또다시 무기를 들었습니다. 내전의 상처를 미처 치유하지도 못한채,우리는 또다시 반란군세력을 상대하여야 합니다....."
+ korea.21.a:0 "이나라가 어떻게 되려나."
  
  korea.100.t:0 "내전에 돌입"
  korea.100.d:0 "한반도에서 내전이 시작되었습니다."
@@ -126,6 +130,15 @@
  rok.1.a:0 "김영삼 대통령!"
  rok.1.b:0 "김구 대통령!"
  
+ rok.3.t:0 "하나회 잔재숙청"
+ rok.3.d:0 "."
+ rok.3.a:0 "그들은 아직 대한민국의 군인들이다"
+ rok.3.b:0 "군사독재의 잔재에게 줄수있는건 처형뿐이다!"
+ 
+ rok.4.t:0 "경제위기"
+ rok.4.d:0 "."
+ rok.4.a:0 ""
+ 
  rok.5.t:0 "조선총독부 철거?"
  rok.5.d:0 "."
  rok.5.a:0 "보존할가치가있다, 다른곳으로 이전시키자"
@@ -134,6 +147,10 @@
  rok.6.t:0 "자위대로부터의 경고"
  rok.6.d:0 "동해에서 충돌이있은이후, 쓰시마의 해상자위대로부터의 무전이 들려왔습니다. '동해상에있는 모든 일본제국해군,대한민국해군 함정은 즉시 평화를위협하는 적대행위를 중단하라'라는 내용이였습니다 이들은 또한 '그어느측이든 계속 적대행위를 지속한다면 자위대는 평화수호를위해 싸울것이다.'라는 내용을 추가로 전송하였습니다. 우리는 일단 한발물러서는수밖에 없을것같습니다."
  rok.6.a:0 "왜 저들도 같이 와가지고는..."
+ 
+ rok.7.t:0 "자위대와 협상"
+ rok.7.d:0 ""
+ rok.7.a:0 ""
  
  rok.8.t:0 "한국통신 파업사태"
  rok.8.d:0 ""
@@ -168,6 +185,34 @@
  rok.13.d:0 ""
  rok.13.a:0 "어림도없다!"
  rok.13.b:0 "우리는 그들의 힘이 필요하다."
+ 
+ rok.14.t:0 "한국이 우리에게 영토를 요구하다"
+ rok.14.d:0 ""
+ rok.14.a:0 "어림도없다!"
+ rok.14.b:0 "우리는 그들의 힘이 필요하다."
+
+ rok.15.t:0 "한국이 우리에게 영토를 요구하다"
+ rok.15.d:0 ""
+ rok.15.a:0 "어림도없다!"
+ rok.15.b:0 "우리는 그들의 힘이 필요하다."
+ 
+ rok.16.t:0 "중국이 우리의 요구를 거부하다!!"
+ rok.16.d:0 ""
+ rok.16.a:0 "그렇다면 전쟁뿐이다"
+ 
+ rok.17.t:0 "중국이 우리의 도움을 요청하다"
+ rok.17.d:0 ""
+ rok.17.a:0 "적의 적은 동지이다!"
+ rok.17.b:0 "우리가 나설필요는없다."
+ 
+ rok.18.t:0 "중국이 우리의 도움을 요청하다"
+ rok.18.d:0 ""
+ rok.18.a:0 "장제스를 돕자!"
+ rok.18.b:0 "우리가 나설필요는없다."
+ 
+ rok.19.t:0 "국공합작결성"
+ rok.19.d:0 ""
+ rok.19.a:0 "침략자를 격퇴하자!"
  
  rok.24.t:0 "한국이 연합국가입을 요청하다"
  rok.24.d:0 ""
@@ -212,6 +257,47 @@
  rok.33.d:0 ""
  rok.33.a:0 "좋군"
  
+ rok.40.t:0 "자위대 연락장교와 접촉하다"
+ rok.40.d:0 "우리는 자위대연락장교와 접촉하여 자위대가 일본제국으로 가지않도록 설득을시도했습니다. 하지만 그는 자위대내부상황은 지금 좋지않으며,입헌파와 제국파가 서로 다툼을하고있다고 전하고있습니다."
+ rok.40.a:0 "그런가..."
+ 
+ rok.41.t:0 "대한민국의 연합국 가입 제안"
+ rok.41.d:0 "오늘.대한민국으로부터 연합국에 가입하면 어떻겠냐는 전문이 도착하였습니다"
+ rok.41.a:0 "좋지"
+ 
+ rok.42.t:0 "우리의 제안을 수락한 미합중국."
+ rok.42.d:0 "미합중국은 우리의 요청을 수락하였습니다. 우리는 함께 싸울것입니다"
+ rok.42.a:0 "훌륭하군"
+ 
+ rok.43.t:0 "주한미군 협상"
+ rok.43.d:0 "미국으로부터의 요청이왔습니다. 한반도내의 미국인과 미군장비들을 그들에게 반환해줬으면 한다는 요청입니다, 이제 더이상 주한미군을 우리에가둬둘순없기에 우리는 선택하여만합니다. 미국은 장비를 반환하는댓가로 추가적인 차관을 제공해준다고 하였습니다"
+ rok.43.a:0 "병사만 반환하는쪽으로 간다"
+ rok.43.b:0 "병사와 장비 둘다 반환한다"
+ 
+ rok.44.t:0 "한국의 역제안"
+ rok.44.d:0 "한국은 우리의 요청을 거부하였고 한반도내의 미국인들만 반환한다 하였습니다 우리는 어떻게 해야할까요?"
+ rok.44.a:0 "그거라도좋다. 하지만 차관제공은 철회한다!"
+ rok.44.b:0 "이협상은 결렬이다!"
+ 
+ rok.45.t:0 "미국이 우리의 제안을 거부하다!"
+ rok.45.d:0 "미국은 모든 미국인과 미국장비의 반환을 요구한다며 더이상협상은없다고 일방적으로 통보하였습니다. 그들이 무력행사에 나서지는 않았지만,주한미군과 한반도의 외국인들은 분개하고있습니다."
+ rok.45.a:0 "이사태가 확산되지는 않았으면....."
+ 
+ rok.46.t:0 "국내 외국인들의 반란!"
+ rok.46.d:0 "협상결렬소식을들은 주한미군들은 분노하여 자기들을 집으로 보내달라며 들고일어났습니다. 한미연합사령부는 무너졌으며,주한미군병사들이 난동을부리고있습니다. 또한 한반도내의 다른외국인들도 분개하여 시위를하는중입니다. 내전이후 최대의 대혼란입니다!!"
+ rok.46.a:0 "이런제기랄!!"
+ 
+ rok.47.t:0 "미국이 우리의 제안을 수락하다."
+ rok.47.d:0 "미국은 우리가제안한 인원만 반환하는것에 동의하였고,미국으로 떠나는첫배가 오늘 출발하였습니다. 이들은 자신의 원래성과 이름을버린채 살아갈것입니다. 다만 미국은 약속한 차관은 제공이불가능하다고 통보하였으며,우리는 미래의 기술을 지키는거로 만족해야했습니다."
+ rok.47.a:0 "협상이 잘 마무리되어 다행이군."
+ 
+ rok.48.t:0 "대한민국이 우리의 제안을 수락하다."
+ rok.48.d:0 "대한민국은 우리가요청한것에 동의하였고. 우리미국인들은 본국으로 돌아올것입니다. 한국은 이들이 자신의 원래성과 이름을버린채 살아가고,원래 가족관계를 모두 정리하는것을 귀환시키는조건으로 걸었고,우리는 이를 수락하였습니다. 또한 이들과 같이온 미래의장비들은 바로 국방성으로 보내져 방산업체 연구원,국방성연구원들과 함께 철저하게 연구,분석되었으며 의외로 지상장비는 역설계가 간단하여 우리의 공업시설으로 문제없이 생산이 가능할것같습니다."
+ rok.48.a:0 "환상적이군."
+ 
+ rok.49.t:0 "새로운 장비의 생산이 가능합니다"
+ rok.49.d:0 "연구원들은 역설계를 끝마쳤고 성능은 약간떨어지지만 그럴듯하게 복제하는데 성공하였습니다. 곧, 이 무기들은 우리병사들에게 보급될것입니다. 또한 시험적으로 2개 전차사단이 새로 창설되었습니다."
+ rok.49.a:0 "성능이뛰어난 병기로군"
  
  mkorea.51.t:0 "동해교전"
  mkorea.51.d:0 "."
@@ -361,6 +447,24 @@
  kor_news.25.a:0 "한반도의 긴장이 고조되고 있다."
  kor_news.25.b:0 "죽일 놈들!"
  kor_news.25.c:0 "우리는 한 마디도 해줄 수 없다."
+ 
+ kor_news.26.t:0 "상하이 도발사건"
+ kor_news.26.desc:0 "어젯밤, 대한민국의 초계함이 상하이앞바다에 나타났습니다. 중국국민당은 닝하이급 경순양함을 급파하여 대응하였고 곧 경고방송과 경고사격을 하였습니다. 대한민국의 초계정은 이렇다한대응없이 다시 되돌아갔지만 대한민국측은 이것을 중국국민당의 도발로보고 비난하기에 나섰습니다."
+ kor_news.26.a:0 ""
+ kor_news.26.b:0 ""
+ kor_news.26.c:0 ""
+ 
+ kor_news.27.t:0 "독일을 비난한 대한민국"
+ kor_news.27.desc:0 ""
+ kor_news.27.a:0 ""
+ kor_news.27.b:0 ""
+ kor_news.27.c:0 ""
+ 
+ kor_news.29.t:0 "중한전쟁의 발발"
+ kor_news.29.desc:0 ""
+ kor_news.29.a:0 ""
+ kor_news.29.b:0 ""
+ kor_news.29.c:0 ""
  
  kor_news.28.t:0 "국제연합의 설립"
  kor_news.28.desc:0 "오늘. 부산,해운대에서 국제연합본부의 완공기념식이 개최되었습니다. 이건물은 1952년당시 뉴욕에 건축되었었던 국제연합본부를 본따 설계되었으며, 기념식에는 각국인사들이 참여하였습니다.\n\n대한민국 대통령 [ROK.GetLeader]는 연설에서 '세계는이미 2번의 대전쟁을 거쳤으며, 과오가반복되지않도록 모든국가의 참여가 중요하다'라는 말을 남겼습으며, 지구의 모든국가가 참여하는게 중요하다고 강조했습니다.\n\n한편, 국제연합의 상임이사국으로 [ROK.GetName]과 [ENG.GetName],[FRA.GetName],[SOV.GetName],[USA.GetName],[JAP.GetName],[CHI.GetName]들이있습니다."
