--- a/localisation/FoS_opening_l_english.yml
+++ b/localisation/FoS_opening_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-
+ TSK_is_end:0 "TIME SLIP KOREA가 완성되었다."
  TNO_DEMO_TEXT_APPEAR: "[GET_CURRENT_INTRO_TEXT]"
  TNO_OPENING_SCREEN_BUTTON_TEXT: "[GET_CLOSEBUTTON_TEXT]"
  TNO_OPENING_SCREEN_BUTTON_TT: "§R전쟁이 곧 다가올 것 같군.§!"
