--- a/localisation/replace/kor_countries_l_english.yml
+++ b/localisation/replace/kor_countries_l_english.yml
@@ -143,4 +143,6 @@
  RU1_ADJ:0 "러시아 연방군"
  RU1:0 "러시아 연방군"
  
- 
+ SOV_communism:0 "소비에트 사회주의 공화국 연방"
+ CHI_neutrality:0 "중화민국"
+ ITA_fascism:0 "이탈리아 왕국"
