--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -257,6 +257,21 @@
  rok.33.d:0 ""
  rok.33.a:0 "좋군"
  
+ rok.37.t:0 "거래를 제안한 대한민국."
+ rok.37.d:0 "대한민국은 우리에게 거래를 제안하였습니다. 전쟁중인 우리의 사정을 생각해 최신무기와 장비의 제공을 약속하는 대신에 말레이의 통제권을 요청하였습니다. 우린 어떻게 회답해야할까요?"
+ rok.37.a:0 "거래를 수락한다."
+ rok.37.b:0 "말레이시아는 대영제국에 남을것이다!"
+ 
+ rok.38.t:0 "인도네시아의 보호를 제안한 대한민국"
+ rok.38.d:0 ""
+ rok.38.a:0 "거래를 수락한다."
+ rok.38.b:0 "말도안된다!"
+ 
+ rok.39.t:0 "필리핀의 보호를 제안한 대한민국"
+ rok.39.d:0 ""
+ rok.39.a:0 "거래를 수락한다."
+ rok.39.b:0 "말도안된다!"
+ 
  rok.40.t:0 "자위대 연락장교와 접촉하다"
  rok.40.d:0 "우리는 자위대연락장교와 접촉하여 자위대가 일본제국으로 가지않도록 설득을시도했습니다. 하지만 그는 자위대내부상황은 지금 좋지않으며,입헌파와 제국파가 서로 다툼을하고있다고 전하고있습니다."
  rok.40.a:0 "그런가..."
@@ -298,6 +313,10 @@
  rok.49.t:0 "새로운 장비의 생산이 가능합니다"
  rok.49.d:0 "연구원들은 역설계를 끝마쳤고 성능은 약간떨어지지만 그럴듯하게 복제하는데 성공하였습니다. 곧, 이 무기들은 우리병사들에게 보급될것입니다. 또한 시험적으로 2개 전차사단이 새로 창설되었습니다."
  rok.49.a:0 "성능이뛰어난 병기로군"
+
+ rok.50.t:0 "한국의 제안"
+ rok.50.d:0 "한국은 우리에게 말레이와 실론섬의 해군기지의 임대를 요청했고,그댓가로 지상장비의 무료라이센스 생산을 제안하였습니다 이제안을 받아들여야 할까요?"
+ rok.50.a:0 "좋다!"
  
  mkorea.51.t:0 "동해교전"
  mkorea.51.d:0 "."
