이벤트내용 조금

--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -126,14 +126,14 @@
 #######################민주
  
  rok.1.t:0 "14대 대선"
- rok.1.d:0 "."
+ rok.1.d:0 "내전이 끝나고 대한민국이 다시 재건됨에 따라, 전범인 노태우 대통령 대신 새로운 대통령의 선출이 시작되었습니다. 김영삼과 김구 양 후보가 팽팽하게 접전을 치뤘으며 누구 하나도 우위를 점하지 못하였습니다. 선거날, 개표방송을 통해 당선일을 발표하였으니 그는..."
  rok.1.a:0 "김영삼 대통령!"
  rok.1.b:0 "김구 대통령!"
  
  rok.3.t:0 "하나회 잔재숙청"
  rok.3.d:0 "."
  rok.3.a:0 "그들은 아직 대한민국의 군인들이다"
- rok.3.b:0 "군사독재의 잔재에게 줄수있는건 처형뿐이다!"
+ rok.3.b:0 "군사독재의 잔재에게 줄 수 있는건 죽음뿐이다!"
  
  rok.4.t:0 "경제위기"
  rok.4.d:0 "."
@@ -141,8 +141,8 @@
  
  rok.5.t:0 "조선총독부 철거?"
  rok.5.d:0 "."
- rok.5.a:0 "보존할가치가있다, 다른곳으로 이전시키자"
- rok.5.b:0 "저 흉측한것을 없애버려라!"
+ rok.5.a:0 "보존할 가치가 있다, 다른 곳으로 이전시키자"
+ rok.5.b:0 "저 흉측한 것을 없애버려라!"
  
  rok.6.t:0 "자위대로부터의 경고"
  rok.6.d:0 "동해에서 충돌이있은이후, 쓰시마의 해상자위대로부터의 무전이 들려왔습니다. '동해상에있는 모든 일본제국해군,대한민국해군 함정은 즉시 평화를위협하는 적대행위를 중단하라'라는 내용이였습니다 이들은 또한 '그어느측이든 계속 적대행위를 지속한다면 자위대는 평화수호를위해 싸울것이다.'라는 내용을 추가로 전송하였습니다. 우리는 일단 한발물러서는수밖에 없을것같습니다."
@@ -210,52 +210,56 @@
  rok.18.a:0 "장제스를 돕자!"
  rok.18.b:0 "우리가 나설필요는없다."
  
- rok.19.t:0 "국공합작결성"
+ rok.19.t:0 "국공합작 결성"
  rok.19.d:0 ""
  rok.19.a:0 "침략자를 격퇴하자!"
  
  rok.24.t:0 "한국이 연합국가입을 요청하다"
- rok.24.d:0 ""
+ rok.24.d:0 "늘어나는 독일의 위협에 따라 미래에서 왔다고 자칭하는 대한민국에서 연합국 가입을 정식으로 요청해왔습니다."
  rok.24.a:0 "좋지."
  rok.24.b:0 "거부한다!"
  
  rok.25.t:0 "영국이 우리의 요청을 수락하다."
- rok.25.d:0 ""
+ rok.25.d:0 "연합국의 일원으로 정식으로 참여하였습니다. 세계는 다시 평화롭게 나아갈 것입니다."
  rok.25.a:0 "좋군"
  
  rok.26.t:0 "영국이 우리의 요청을 거부하다."
- rok.26.d:0 ""
+ rok.26.d:0 "저들이 거절하였습니다. 저들은 고독하게 무너질 것입니다.."
  rok.26.a:0 "제기랄"
  
  rok.27.t:0 "한국이 우리에게 협조를 요청하다."
- rok.27.d:0 ""
- rok.27.a:0 "실행에 착수하도록하지"
+ rok.27.d:0 "최근 늘어나는 파시스트 군국주의의 위협에, 동방의 대한민국이 아메리카에서의 파시즘 정화라는 명목으로 우리에게 대 베네수엘라 전쟁에서의 협조를 요청하였습니다."
+ rok.27.a:0 "실행에 착수하도록 하지"
  rok.27.b:0 "아메리카는 우리의 구역이다!"
  
  rok.28.t:0 "미국이 우리의 요청을 수락하다."
- rok.28.d:0 ""
+ rok.28.d:0 "미국이 필리핀의 통제권을 이양함에 따라, 우리 대한민국은 미국과의 적법한 거래를 성공시켰습니다. 아시아는 이제 마땅히 해방될 것 입니다."
  rok.28.a:0 "자! 들어가자!"
  
  rok.29.t:0 "미국이 우리의 요청을 거부하다."
- rok.29.d:0 ""
+ rok.29.d:0 "저 제국주의자들이 우리의 요청을 거절하였습니다. 자신들의 탐욕만을 충족시키기 위해 식민지를 유지하는 저들은, 역사대로 몰락할 것 입니다.\n\n...아마도요."
  rok.29.a:0 "나쁜소식이군"
  
  rok.30.t:0 "한국이 우리에게 협조를 요청하다."
- rok.30.d:0 ""
- rok.30.a:0 "실행에 착수하도록하지"
+ rok.30.d:0 "늘어가는 파시즘과 군국주의의 물결을 "정화"라는 명목 아래 짓밟기 위하여 [ROK.GetName] 정부에서 [POR.GetLeader]가 다스리는 [POR.GetName]에 대한 전쟁 협조를 요청하였습니다."
+ rok.30.a:0 "실행에 착수하도록 하지"
  rok.30.b:0 "안돼!"
  
  rok.31.t:0 "영국이 우리의 요청을 수락하다."
- rok.31.d:0 ""
+ rok.31.d:0 "영국이 말레이의 통제권을 이양함에 따라, 우리 대한민국은 영국과의 적법한 거래를 성공시켰습니다. 아시아는 이제 마땅히 해방될 것 입니다."
  rok.31.a:0 "자! 들어가자!"
  
  rok.32.t:0 "영국이 우리의 요청을 거부하다."
- rok.32.d:0 ""
+ rok.32.d:0 "저 제국주의자들이 우리의 요청을 거절하였습니다. 자신들의 탐욕만을 충족시키기 위해 식민지를 유지하는 저들은, 역사대로 몰락할 것 입니다."
  rok.32.a:0 "나쁜소식이군"
  
  rok.33.t:0 "국제연합의 수립."
- rok.33.d:0 ""
+ rok.33.d:0 "오늘, 타임슬립한지 수년이 지금 이날 다시 국제연합의 수립이 대한민국 수도 서울에서 이루어졌습니다. 새로운 국제연합의 이사국들은 기존 5개국에 한국이 추가되었으며 이번 국제연합은 평화적으로 유지될 것입니다."
  rok.33.a:0 "좋군"
+ 
+ rok.36.t:0 "동아시아 연방 제안"
+ rok.36.d:0 ""
+ rok.36.a:0 ""
  
  rok.37.t:0 "거래를 제안한 대한민국."
  rok.37.d:0 "대한민국은 우리에게 거래를 제안하였습니다. 전쟁중인 우리의 사정을 생각해 최신무기와 장비의 제공을 약속하는 대신에 말레이의 통제권을 요청하였습니다. 우린 어떻게 회답해야할까요?"
@@ -263,21 +267,21 @@
  rok.37.b:0 "말레이시아는 대영제국에 남을것이다!"
  
  rok.38.t:0 "인도네시아의 보호를 제안한 대한민국"
- rok.38.d:0 ""
+ rok.38.d:0 "대한민국은 우리에게 거래를 제안하였습니다. 전쟁중인 우리의 사정을 생각해 최신무기와 장비의 제공을 약속하는 대신에 인도네시아의 통제권을 요청하였습니다. 우린 어떻게 회답해야할까요?"
  rok.38.a:0 "거래를 수락한다."
- rok.38.b:0 "말도안된다!"
+ rok.38.b:0 "말도 안된다!"
  
  rok.39.t:0 "필리핀의 보호를 제안한 대한민국"
- rok.39.d:0 ""
+ rok.39.d:0 "대한민국은 우리에게 거래를 제안하였습니다. 우리의 사정을 생각해 최신무기와 장비의 제공을 약속하는 대신에 필리핀의 통제권을 요청하였습니다. 우린 어떻게 회답해야할까요?"
  rok.39.a:0 "거래를 수락한다."
- rok.39.b:0 "말도안된다!"
+ rok.39.b:0 "말도 안된다!"
  
  rok.40.t:0 "자위대 연락장교와 접촉하다"
  rok.40.d:0 "우리는 자위대연락장교와 접촉하여 자위대가 일본제국으로 가지않도록 설득을시도했습니다. 하지만 그는 자위대내부상황은 지금 좋지않으며,입헌파와 제국파가 서로 다툼을하고있다고 전하고있습니다."
  rok.40.a:0 "그런가..."
  
  rok.41.t:0 "대한민국의 연합국 가입 제안"
- rok.41.d:0 "오늘.대한민국으로부터 연합국에 가입하면 어떻겠냐는 전문이 도착하였습니다"
+ rok.41.d:0 "오늘, 대한민국의 연합국 정식 가입요청문이 도달하였습니다."
  rok.41.a:0 "좋지"
  
  rok.42.t:0 "우리의 제안을 수락한 미합중국."
@@ -295,12 +299,12 @@
  rok.44.b:0 "이협상은 결렬이다!"
  
  rok.45.t:0 "미국이 우리의 제안을 거부하다!"
- rok.45.d:0 "미국은 모든 미국인과 미국장비의 반환을 요구한다며 더이상협상은없다고 일방적으로 통보하였습니다. 그들이 무력행사에 나서지는 않았지만,주한미군과 한반도의 외국인들은 분개하고있습니다."
- rok.45.a:0 "이사태가 확산되지는 않았으면....."
+ rok.45.d:0 "미국은 모든 미국인과 미국장비의 반환을 요구한다며 더이상협상은없다고 일방적으로 통보하였습니다. 그들이 무력행사에 나서지는 않았지만, 주한미군과 한반도의 외국인들은 분개하고있습니다."
+ rok.45.a:0 "이 사태가 확산되지는 않았으면....."
  
  rok.46.t:0 "국내 외국인들의 반란!"
- rok.46.d:0 "협상결렬소식을들은 주한미군들은 분노하여 자기들을 집으로 보내달라며 들고일어났습니다. 한미연합사령부는 무너졌으며,주한미군병사들이 난동을부리고있습니다. 또한 한반도내의 다른외국인들도 분개하여 시위를하는중입니다. 내전이후 최대의 대혼란입니다!!"
- rok.46.a:0 "이런제기랄!!"
+ rok.46.d:0 "협상 결렬소식을들은 주한미군들은 분노하여 자기들을 집으로 보내달라며 들고 일어났습니다. 한미연합사령부는 무너졌으며, 주한미군병사들이 난동을부리고있습니다. 또한 한반도내의 다른외국인들도 분개하여 시위를하는중입니다. 내전이후 최대의 대혼란입니다!!"
+ rok.46.a:0 "이런 제기랄!!"
  
  rok.47.t:0 "미국이 우리의 제안을 수락하다."
  rok.47.d:0 "미국은 우리가제안한 인원만 반환하는것에 동의하였고,미국으로 떠나는첫배가 오늘 출발하였습니다. 이들은 자신의 원래성과 이름을버린채 살아갈것입니다. 다만 미국은 약속한 차관은 제공이불가능하다고 통보하였으며,우리는 미래의 기술을 지키는거로 만족해야했습니다."
@@ -311,8 +315,8 @@
  rok.48.a:0 "환상적이군."
  
  rok.49.t:0 "새로운 장비의 생산이 가능합니다"
- rok.49.d:0 "연구원들은 역설계를 끝마쳤고 성능은 약간떨어지지만 그럴듯하게 복제하는데 성공하였습니다. 곧, 이 무기들은 우리병사들에게 보급될것입니다. 또한 시험적으로 2개 전차사단이 새로 창설되었습니다."
- rok.49.a:0 "성능이뛰어난 병기로군"
+ rok.49.d:0 "연구원들은 역설계를 끝마쳤고 성능은 약간 떨어지지만 그럴듯하게 복제하는데 성공하였습니다. 곧, 이 무기들은 우리병사들에게 보급될것입니다. 또한 시험적으로 2개 전차사단이 새로 창설되었습니다."
+ rok.49.a:0 "성능이 뛰어난 병기로군"
 
  rok.50.t:0 "한국의 제안"
  rok.50.d:0 "한국은 우리에게 말레이와 실론섬의 해군기지의 임대를 요청했고,그댓가로 지상장비의 무료라이센스 생산을 제안하였습니다 이제안을 받아들여야 할까요?"
