--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -318,6 +318,23 @@
  rok.50.d:0 "한국은 우리에게 말레이와 실론섬의 해군기지의 임대를 요청했고,그댓가로 지상장비의 무료라이센스 생산을 제안하였습니다 이제안을 받아들여야 할까요?"
  rok.50.a:0 "좋다!"
  
+ rok.51.t:0 "시암압박"
+ rok.51.d:0 ""
+ rok.51.a:0 "최후통첩을 보내라!"
+ 
+ rok.52.t:0 "한국에서 온 최후통첩"
+ rok.52.d:0 ""
+ rok.52.a:0 "우리는 굴복할수밖에 없다"
+ rok.52.b:0 "굴복할까보냐!"
+ 
+ rok.53.t:0 "최후통첩을 거부한 시암"
+ rok.53.d:0 ""
+ rok.53.a:0 "우리는 몇주내로 그들을 박살낼것이다."
+ 
+ rok.54.t:0 "최후통첩을 수락한 시암"
+ rok.54.d:0 ""
+ rok.54.a:0 "훌륭하군."
+ 
  mkorea.51.t:0 "동해교전"
  mkorea.51.d:0 "."
  mkorea.51.a:0 ""
@@ -486,13 +503,13 @@
  kor_news.29.c:0 ""
  
  kor_news.28.t:0 "국제연합의 설립"
- kor_news.28.desc:0 "오늘 부산의 해운대에서 국제연합본부의 완공기념식이 개최되었습니다. 이 건물은 1952년 당시 뉴욕에 건축되었었던 국제연합본부를 본따 설계되었으며, 기념식에는 각국의 인사가 참여하였습니다.\n\n대한민국 대통령 [ROK.GetLeader]는 연설에서 '세계는 이미 두 번의 대전쟁을 거쳤으며, 이런 과오가 반복되지 않도록 모든 국가의 참여가 중요하다'고 발언하며 지구의 모든 국가가 참여하는 것이 중요하다고 강조했습니다.\n\n국제연합의 상임이사국으로 지정된 국가들은 [ROK.GetName]과 [ENG.GetName], [FRA.GetName], [SOV.GetName], [USA.GetName], [JAP.GetName], [CHI.GetName]입니다."
- kor_news.28.a:0 "더 이상의 대전쟁은 안된다."
- kor_news.28.b:0 "국제연합이 세계 평화를 지킬것이다."
+ kor_news.28.desc:0 "오늘. 부산,해운대에서 국제연합본부의 완공기념식이 개최되었습니다. 이건물은 1952년당시 뉴욕에 건축되었었던 국제연합본부를 본따 설계되었으며, 기념식에는 각국인사들이 참여하였습니다.\n\n대한민국 대통령 [ROK.GetLeader]는 연설에서 '세계는이미 2번의 대전쟁을 거쳤으며, 과오가반복되지않도록 모든국가의 참여가 중요하다'라는 말을 남겼습으며, 지구의 모든국가가 참여하는게 중요하다고 강조했습니다.\n\n한편, 국제연합의 상임이사국으로 [ROK.GetName]과 [ENG.GetName],[FRA.GetName],[SOV.GetName],[USA.GetName],[JAP.GetName],[CHI.GetName]들이있습니다."
+ kor_news.28.a:0 "더이상의 대전쟁은 안된다."
+ kor_news.28.b:0 "국제연합이 세계평화를 지킬것이다."
  
 ################################## 북한 ##############################################
  PRK.13.t:0 "국방위원장의 암살!"
- PRK.13.d:0 "김일성 광장에서 열병식이 한창 진행 중이던 시각, 계획대로 행렬 속에서 주행 중이던 전차 한 량이 국방위원장 일동을 향해 발포했습니다. 단 한 발의 포성으로 광장은 순식간에 아수라장이 됐지만 얼마 지나지 않아 우리 소속의 장교들에 의해 상황은 통제 하에 들어갔습니다. 그러나 현재 김정일 국방위원장의 상태는 묘연합니다. 유일하게 우리가 확신할 수 있는 것은 그가 성한 몸으로 살아남았더라도 우리의 거사를 막을 방도가 없을 것이라는 점입니다."
+ PRK.13.d:0 "김일성 광장에서 열병식이 한창 진행 중이던 시각, 계획대로 행렬 속에서 주행 중이던 전차 한 량이 국방위원장 일동을 향해 발포했습니다. 단 한 발의 포성으로 광장은 순식간에 아수라장이 됐지만 얼마 지나지 않아 우리 소속의 장교들에 의해 상황은 통제 하에 들어갔습니다. 그러나 현재 김정일 국방위원장의 상태는 묘연합니다. 유일하게 우리가 확신할 수 있는 것은 그가 성한 몸으로 살아남았더라도 우리의 거사를 막을 방도가 없을 것이라는 점입니다.."
  PRK.13.a:0 "잘 자시오, 동지."
  
  PRK.1.t:0 "1936년의 세계"
@@ -503,23 +520,23 @@
  PRK.2.d:0 "우리 공화국의 소식을 들은 독립운동가들이 하나 둘 입국을 신청하기 시작했습니다. 이들은 우리 국가에 큰 도움이 될 것입니다!"
  PRK.2.a:0 "공화국에 잘 왔습네다, 동지."
  
- PRK.24.t:0 "일본의 조건부 항복 제안"
- PRK.24.desc:0 "일본의 외교관이 공식적으로 평화를 제의하기 위해 접촉해왔습니다. 그들은 우리가 요구했던 일본공산당의 집권, 규슈와 주고쿠, 시고쿠의 할양과 일본 해군의 함정 일부를 조선인민해군에 편입함에 동의하는 대신 이 이상의 적대행위를 중지할 것과 천황 일가의 안전 보장을 요구하였습니다."
- PRK.24.a:0 "이 정도면 충분히 만족스러운 제안이다."
- PRK.24.b:0 "어림없는 소리!"
+ PRK.24.t:0 "일본이 조건부 항복을 제안하다"
+ PRK.24.desc:0 "일본은 공식적으로 평화를 제의하기 위해 접촉해왔습니다. 우리가 요구했던 일본공산당의 집권, 규슈와주고쿠,시고쿠의 할양 일본함대일부를 조선인민해군에 편입하는것에 동의하였습니다. 대신그들은 더이상의 적대행위중지 약속과 천황왕실의 안전보장을 요청하였습니다."
+ PRK.24.a:0 "좋아. 평화에 서명한다"
+ PRK.24.b:0 "어림없는소리!"
  
- PRK.25.t:0 "북한의 평화 제의 수락"
- PRK.25.desc:0 "북한은 우리의 평화 제의를 수락했고, 우리 영토를 할양하는 대가로 적대 행위를 중지했습니다."
- PRK.25.a:0 "치욕스럽다."
+ PRK.25.t:0 "북한이 우리의 제의를 수락하다"
+ PRK.25.desc:0 "북한은 우리의 평화 제의를 수락했고, 우리영토를 할양하는 대가로 적대 행위를 중지했습니다."
+ PRK.25.a:0 "치욕이군..."
  
- PRK.26.t:0 "북한의 평화 제의 거절"
+ PRK.26.t:0 "북한의 평화 거절"
  PRK.26.desc:0 "북한(은)는 우리의 평화 제의를 거부했고, 무조건 항복을 받아내기 전까지 전쟁을 계속할 것입니다."
  PRK.26.a:0 "그럼 우리도 최후까지 싸울 것이다!"
  
  
  PRK.27.t:0 "일본 해군의 인도"
- PRK.27.desc:0 "조약에 따라 일제의 일부 군함들이 오늘 새로이 조선인민해군에 편입되었습니다. 우리는 이 함선들을 요긴하게 사용할 수 있을 것이며 또한 대함미사일의 장착과 우리의 제트기가 이 구식 항공모함에서 운용이 가능한지 실험해보아야 할 것입니다."
- PRK.27.a:0 "좋은 일이다."
+ PRK.27.desc:0 "조약의 항목에따라, 일부 구일본제국 군함들이 오늘 새로이 조선인민해군에 편입되었습니다. 우리는 이 함선들을 요긴하게 사용할수있을겁니다, 또한 대함미사일의 장착과,우리의 제트기가 이 구식항공모함에서 운용이 가능한지 실험해보아야 할것입니다"
+ PRK.27.a:0 "확인."
  
  
  PRK.32.t:0 "수도 이전"
