--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -130,6 +130,10 @@
  rok.1.a:0 "김영삼 대통령!"
  rok.1.b:0 "김구 대통령!"
  
+ rok.2.t:0 "대한민국 내전의 종료"
+ rok.2.d:0 "내전의 여파는 처참했고. 눈에보이는 모든것들은 파괴되어있습니다. 우리는 남은 하나회잔당,군사정부의 잔재를 청소해야할것이며 내전으로 파괴된 이국가를 재건해야 할것입니다. 거리에는 희망이 보이지 않지만. 나락으로 떨어진 이 국가는 어떤 형태로든 다시 일어나야만 합니다."
+ rok.2.a:0 "우리에겐 아직 할일이 남았다"
+ 
  rok.3.t:0 "하나회 잔재숙청"
  rok.3.d:0 "."
  rok.3.a:0 "그들은 아직 대한민국의 군인들이다"
@@ -370,7 +374,7 @@
  kor_news.4.f:0 "동지여! 전진하자!"
 
  kor_news.5.t:0 "부산 함락"
- kor_news.5.desc:0 "'생지옥이 따로 없디 않소?'\n-인터뷰에 응한 익명의 조선인민군 병사, 끝까지 저항하던 대한민국 국군 세력이 전멸한 항구를 둘러보며\n\n수도인 서울을 잃은 한국군은 속절없이 패배를 거듭하며 임시 수도인 부산 지역에 마지막 방어선을 구축했습니다. 극적인 지원이 오지 않는 한 전세의 역전이 불가능하리라는 것을 확신한 그들은 최우선 목표를 적 병력의 퇴치에서 정부 수반과 민간인 대피를 위한 시간 확보로 변경했습니다.\n\n그들은 피난민들이 모인 여러 항구를 둘러 구축된 방어선에서 필사적으로 저항했습니다. 포격으로 하반신을 잃은 부상병마저 동료의 부축을 받으며 기관총을 잡았고, 개중 일부는 자원 입대한 소년병과 여성들도 있었습니다. 적은 수의 비전투 요원들은 아이와 여자들을 우선시해 해상자위대와 대한민국 해군의 보호 아래에 제주도와 쓰시마로 향하는 대피선에 동승했고, 마지막 배가 떠날 때까지 대한민국 국군은 조선인민군의 공격에서 항구를 지켜냈습니다. 후환을 없애고자 피난민이 탑승한 선단을 추격한 조선인민군이었으나, 해군력의 우위를 점하지 못한 그들은 '승패가 완전히 갈린 현 상황에서 무의미한 국력의 소진을 막고자 한다'는 명목으로 일방적인 종전을 대대적으로 선언했습니다."
+ kor_news.5.desc:0 "수도인 서울을 잃은 한국군은 속절없이 패배를 거듭하며 임시 수도인 부산 지역에 마지막 방어선을 구축했습니다. 전세의 역전이 불가능하리라는 것을 확신한 그들은 최우선 목표를 적 병력의 퇴치에서 정부 수반과 민간인 대피를 위한 시간 확보로 변경했습니다.\n\n여러 항구를 둘러 구축된 방어선에서 필사적으로 저항했습니다. 포격으로 하반신을 잃은 부상병마저 동료의 부축을 받으며 기관총을 잡았고, 개중 일부는 자원 입대한 소년병과 여성들도 있었습니다. 적은 수의 비전투 요원들은 아이와 여자들을 우선시해 해상자위대와 대한민국 해군의 보호 아래에 제주도와 쓰시마로 향하는 대피선에 동승했고, 마지막 배가 떠날 때까지 대한민국 국군은 조선인민군의 공격에서 항구를 지켜냈습니다. 후환을 없애고자 피난민이 탑승한 선단을 추격한 조선인민군이었으나, 해군력의 우위를 점하지 못한 그들은 일방적인 종전을 대대적으로 선언했습니다."
  kor_news.5.a:0 "그들은 분전했다."
  kor_news.5.b:0 "우리가 생각할 수 있는 최악의 결과가 도출될 줄이야."
  kor_news.5.c:0 "끔찍한 결과다!"
@@ -472,7 +476,7 @@
  kor_news.22.c:0 "저 해괴한 것이 완공되는 날이 오게 될 줄이야."
 
  kor_news.23.t:0 "대한민국 내전의 종식"
- kor_news.23.desc:0 "여느 내전이 그렇듯이, 현장은 참혹했습니다. 한때 사람들로 붐볐을 시가지는 총알이 박혀 구멍투성이가 된 모래주머니와 차갑게 식은 탄피들로 아수라장이었고, 주택가엔 곳곳에 배인 화약 냄새와 탄흔이 이곳에서 일어났을 총격전을 대변해주고 있었습니다. 어디를 가든 느껴지는 피비린내는 물론입니다.\n\n내전의 상처는 장소에 국한되지 않고 수많은 것에 씻을 수 없을 흔적을 남겼습니다. 내전으로 파괴된 사회에는 자연스럽게 무질서와 불신이 자리잡았고, 공습과 포격이 할퀴고 간 산업 시설은 많은 이들의 희망을 짓밟았습니다. 사람들의 마음에 내려앉은 절망은 내전이 끝났음을 선언하는 라디오 방송 따위로는 감히 물러갈 기미가 보이지 않으며, 모두가 미래를 향한 기대를 저버린 듯 보입니다.\n\n\n동아시아의 소국에 불과한 이 나라가 과연 내전을 딛고 일어설 수 있을까요?"
+ kor_news.23.desc:0 "여느 내전이 그렇듯이, 현장은 참혹했습니다. 한때 사람들로 붐볐을 시가지는 총알이 박혀 구멍투성이가 된 모래주머니와 차갑게 식은 탄피들로 아수라장이었고, 주택가엔 곳곳에 배인 화약 냄새와 탄흔이 이곳에서 일어났을 총격전을 대변해주고 있었습니다. 어디를 가든 느껴지는 피비린내는 물론입니다.\n\n내전의 상처는 수많은 것에 씻을 수 없을 흔적을 남겼습니다. 파괴된 사회에는 자연스럽게 무질서와 불신이 자리잡았고, 공습과 포격이 할퀴고 간 산업 시설은 많은 이들의 희망을 짓밟았습니다. 사람들의 마음에 내려앉은 절망은 내전이 끝났음을 선언하는 라디오 방송 따위로는 감히 물러갈 기미가 보이지 않으며, 모두가 미래를 향한 기대를 저버린 듯 보입니다.\n동아시아의 소국에 불과한 이 나라가 과연 내전을 딛고 일어설 수 있을까요?"
  kor_news.23.a:0 "불확실하다."
  kor_news.23.b:0 "이것은 우리에게 기회가 될 것이다!"
  kor_news.23.c:0 "언제나 그랬듯이."
