--- a/localisation/replace/kor_ideas_l_english.yml
+++ b/localisation/replace/kor_ideas_l_english.yml
@@ -24,6 +24,9 @@
  KOR_uncompromized_country_idea:0 "존재하지 않는 국가"
  KOR_uncompromized_country_idea_desc:0 "대한민국이라는 국가는 현재 1936년의 세계에는 존재하지 않는국가입니다. 한동안은 이가 우리들을 감춰주겠지만 세상에 우리의 존재가 알려지는건 그리오래걸리지 않을것입니다."
  
+ weak_anti_sub:0 "취약한 대잠방어"
+ weak_anti_sub_desc:0 "해전에서 대잠수함작전은 까다롭지만,대한민국해군은 유난히 잠수함에 더 취약합니다. 대잠전과 소나의 중요성을 경시하고 주력함의 대잠성능을 개량하지 않는다면, 우리는 큰위협에 직면할것입니다."
+ 
  mkr_combat_police:0 "전투경찰"
  mkr_combat_police_desc:0 "전투경찰대는 본래 대간첩작전의 수행을 목적으로 창설된 조직이지만, 민주화운동기를 거치면서 주로 시위진압부대를 상징하는 경찰조직으로 국내외에 인식되어 왔습니다."
  mkr_war_against_crime:0 "범죄와의 전쟁"
